cmake_minimum_required(VERSION 2.8.3)
project(test_src)
find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs genmsg)
add_definitions(-std=c++11)
generate_messages(DEPENDENCIES std_msgs)
catkin_package()
include_directories(include ${catkin_INCLUDE_DIRS})
add_executable(node14 src/node14.cpp)
target_link_libraries(node14 ${catkin_LIBRARIES})
add_dependencies(node14 test_src_generate_messages_cpp)
add_executable(node13 src/node13.cpp)
target_link_libraries(node13 ${catkin_LIBRARIES})
add_dependencies(node13 test_src_generate_messages_cpp)
add_executable(node12 src/node12.cpp)
target_link_libraries(node12 ${catkin_LIBRARIES})
add_dependencies(node12 test_src_generate_messages_cpp)
add_executable(node11 src/node11.cpp)
target_link_libraries(node11 ${catkin_LIBRARIES})
add_dependencies(node11 test_src_generate_messages_cpp)
add_executable(node10 src/node10.cpp)
target_link_libraries(node10 ${catkin_LIBRARIES})
add_dependencies(node10 test_src_generate_messages_cpp)
add_executable(node9 src/node9.cpp)
target_link_libraries(node9 ${catkin_LIBRARIES})
add_dependencies(node9 test_src_generate_messages_cpp)
add_executable(node8 src/node8.cpp)
target_link_libraries(node8 ${catkin_LIBRARIES})
add_dependencies(node8 test_src_generate_messages_cpp)
add_executable(node7 src/node7.cpp)
target_link_libraries(node7 ${catkin_LIBRARIES})
add_dependencies(node7 test_src_generate_messages_cpp)
add_executable(node6 src/node6.cpp)
target_link_libraries(node6 ${catkin_LIBRARIES})
add_dependencies(node6 test_src_generate_messages_cpp)
add_executable(node5 src/node5.cpp)
target_link_libraries(node5 ${catkin_LIBRARIES})
add_dependencies(node5 test_src_generate_messages_cpp)
add_executable(node4 src/node4.cpp)
target_link_libraries(node4 ${catkin_LIBRARIES})
add_dependencies(node4 test_src_generate_messages_cpp)
add_executable(node3 src/node3.cpp)
target_link_libraries(node3 ${catkin_LIBRARIES})
add_dependencies(node3 test_src_generate_messages_cpp)
add_executable(node2 src/node2.cpp)
target_link_libraries(node2 ${catkin_LIBRARIES})
add_dependencies(node2 test_src_generate_messages_cpp)
add_executable(node1 src/node1.cpp)
target_link_libraries(node1 ${catkin_LIBRARIES})
add_dependencies(node1 test_src_generate_messages_cpp)
