cmake_minimum_required(VERSION 2.8.3)
project(test_src)
find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs genmsg)
add_definitions(-std=c++11)
generate_messages(DEPENDENCIES std_msgs)
catkin_package()
include_directories(include ${catkin_INCLUDE_DIRS})
add_executable(node7 src/node7.cpp)
target_link_libraries(node7 ${catkin_LIBRARIES})
add_dependencies(node7 test_src_generate_messages_cpp)
add_executable(node6 src/node6.cpp)
target_link_libraries(node6 ${catkin_LIBRARIES})
add_dependencies(node6 test_src_generate_messages_cpp)
add_executable(node5 src/node5.cpp)
target_link_libraries(node5 ${catkin_LIBRARIES})
add_dependencies(node5 test_src_generate_messages_cpp)
add_executable(node4 src/node4.cpp)
target_link_libraries(node4 ${catkin_LIBRARIES})
add_dependencies(node4 test_src_generate_messages_cpp)
add_executable(node3 src/node3.cpp)
target_link_libraries(node3 ${catkin_LIBRARIES})
add_dependencies(node3 test_src_generate_messages_cpp)
add_executable(node2 src/node2.cpp)
target_link_libraries(node2 ${catkin_LIBRARIES})
add_dependencies(node2 test_src_generate_messages_cpp)
add_executable(node1 src/node1.cpp)
target_link_libraries(node1 ${catkin_LIBRARIES})
add_dependencies(node1 test_src_generate_messages_cpp)
